--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QView3D</title>
   </head>
-  <body>
+  <body class="bg-light-primary dark:bg-dark-primary">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
